- A number of fixes: + Successfully editing a car listing now returns a success message + Wrap select a car from displayCarListingComponent in a scrollable area + Add checking for rego (6 digits) when user creates a new car

--- a/Client/Components/CSS/Body/CarListing/CreateListingContainer.scss
+++ b/Client/Components/CSS/Body/CarListing/CreateListingContainer.scss
@@ -356,6 +356,13 @@
   }
 }
 
+.overflow_createListing_selectCar_wrapper {
+  max-height: 400px;
+  overflow-y: auto;
+  border-top: solid 0.5px #a7a6a1;
+  border-bottom: solid 0.5px #a7a6a1;
+}
+
 .createListing_selectCar_wrapper {
   width: 100%;
 
